@@ -6,6 +6,8 @@
 
   * Linker fixes for AugLagrangian specializations under Visual Studio.
 
+  * Add support for observation weights to LinearRegression.
+
 2014-08-29    mlpack 1.0.10
 
   * Bugfix for NeighborSearch regression which caused very slow allknn/allkfn.
